--- a/bai/finance/pom.xml
+++ b/bai/finance/pom.xml
@@ -17,7 +17,7 @@
   <description/>
 
   <build>
-    <finalName>100mfinance-ejb</finalName>
+    <finalName>100mfinance-full</finalName>
 
     <plugins>
       <plugin>
@@ -31,9 +31,6 @@
             </goals>
             <configuration>
               <classifier>ejb</classifier>
-              <excludes>
-                <exclude>**/ui/**</exclude>
-              </excludes>
             </configuration>
           </execution>
         </executions>
@@ -50,7 +47,6 @@
     <dependency>
       <groupId>com.mg.server</groupId>
       <artifactId>documentcore</artifactId>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.mg.server.docflow</groupId>
