--- a/zzz-parser/pom.xml
+++ b/zzz-parser/pom.xml
@@ -3,6 +3,22 @@
   <groupId>com.tb.pups</groupId>
   <artifactId>zzz-parser</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+
+  <build>
+  <plugins>
+  <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.3</version>
+          <configuration>
+            <source>1.7</source>
+            <target>1.7</target>
+            <executable>${java.7.home}/bin/javac</executable>
+            <fork>true</fork>
+          </configuration>
+        </plugin>
+  </plugins>
+  </build>
   <dependencies>
   	<dependency>
   		<groupId>com.github.javaparser</groupId>
