--- a/zzz-parser/pom.xml
+++ b/zzz-parser/pom.xml
@@ -1,29 +1,53 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.tb.pups</groupId>
-  <artifactId>zzz-parser</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.tb.pups</groupId>
+	<artifactId>zzz-parser</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
 
-  <build>
-  <plugins>
-  <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.3</version>
-          <configuration>
-            <source>1.7</source>
-            <target>1.7</target>
-            <executable>${java.7.home}/bin/javac</executable>
-            <fork>true</fork>
-          </configuration>
-        </plugin>
-  </plugins>
-  </build>
-  <dependencies>
-  	<dependency>
-  		<groupId>com.github.javaparser</groupId>
-  		<artifactId>javaparser-core</artifactId>
-  		<version>2.2.2</version>
-  	</dependency>
-  </dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.3</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+					<executable>${java.7.home}/bin/javac</executable>
+					<fork>true</fork>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	<dependencies>
+		<dependency>
+			<groupId>com.github.javaparser</groupId>
+			<artifactId>javaparser-core</artifactId>
+			<version>2.2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.mg.modules.data</groupId>
+			<artifactId>model</artifactId>
+			<version>4.0.8-SNAPSHOT</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.mg.modules.data</groupId>
+			<artifactId>premodel</artifactId>
+			<version>4.0.8-SNAPSHOT</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.mg.modules</groupId>
+			<artifactId>framework</artifactId>
+			<version>4.0.8-SNAPSHOT</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.github.lukehutch</groupId>
+			<artifactId>fast-classpath-scanner</artifactId>
+			<version>1.9.6</version>
+		</dependency>
+	</dependencies>
 </project>
