--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,7 @@
     <jboss.ejb.version>4.2.1.GA</jboss.ejb.version>
 
     <hibernate.version>3.2.6.ga</hibernate.version>
+    <hibernate.annotations.version>3.2.1.ga</hibernate.annotations.version>
   </properties>
 
   <prerequisites>
@@ -1108,6 +1109,12 @@
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate</artifactId>
         <version>${hibernate.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-annotations</artifactId>
+        <version>${hibernate.annotations.version}</version>
       </dependency>
 
       <dependency>
