--- a/modules/data/model/pom.xml
+++ b/modules/data/model/pom.xml
@@ -63,13 +63,13 @@
 	<dependency>
 		<groupId>org.hibernate</groupId>
 		<artifactId>hibernate</artifactId>
-		<!-- scope>provided</scope-->
+		<scope>provided</scope>
 	</dependency>
 
 	<dependency>
 		<groupId>org.hibernate</groupId>
 		<artifactId>hibernate-annotations</artifactId>
-		<!-- scope>provided</scope-->
+		<scope>provided</scope>
 	</dependency>
 </dependencies>
 
