--- a/server/pom.xml
+++ b/server/pom.xml
@@ -69,6 +69,12 @@
       <artifactId>hibernate</artifactId>
       <scope>provided</scope>
     </dependency>
+    
+    <dependency>
+	<groupId>org.hibernate</groupId>
+	<artifactId>hibernate-annotations</artifactId>
+	<scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <!--<dependencies>
