--- a/pom.xml
+++ b/pom.xml
@@ -491,6 +491,20 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+		<groupId>org.zeroturnaround</groupId>
+		<artifactId>jrebel-maven-plugin</artifactId>
+		<version>1.1.5</version>
+		<executions>
+			<execution>
+				<id>generate-rebel-xml</id>
+				<phase>process-resources</phase>
+				<goals>
+					<goal>generate</goal>
+				</goals>
+			</execution>
+		</executions>
+	  </plugin>
     </plugins>
   </build>
 
