--- a/bai/pom.xml
+++ b/bai/pom.xml
@@ -75,7 +75,7 @@
 
     <dependency>
       <groupId>org.hibernate</groupId>
-      <artifactId>hibernate</artifactId>
+      <artifactId>hibernate-core</artifactId>
       <scope>provided</scope>
     </dependency>
   </dependencies>
