--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -39,7 +39,7 @@
 
     <dependency>
       <groupId>org.hibernate</groupId>
-      <artifactId>hibernate</artifactId>
+      <artifactId>hibernate-core</artifactId>
       <scope>provided</scope>
     </dependency>
     <dependency>
