--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
     <jboss.version>4.2.2.GA</jboss.version>
     <jboss.ejb.version>4.2.1.GA</jboss.ejb.version>
 
-    <hibernate.version>3.2.6.ga</hibernate.version>
+    <hibernate.version>5.0.3.Final</hibernate.version>
   </properties>
 
   <prerequisites>
@@ -1312,9 +1312,24 @@
 
       <dependency>
         <groupId>org.hibernate</groupId>
-        <artifactId>hibernate</artifactId>
+        <artifactId>hibernate-core</artifactId>
         <version>${hibernate.version}</version>
       </dependency>
+      <dependency>
+	    <groupId>org.hibernate</groupId>
+	    <artifactId>hibernate-entitymanager</artifactId>
+	    <version>${hibernate.version}</version>
+      </dependency>
+      <dependency>
+		<groupId>org.hibernate</groupId>
+		<artifactId>hibernate-ehcache</artifactId>
+		<version>${hibernate.version}</version>
+	  </dependency>
+      <dependency>
+	    <groupId>org.hibernate</groupId>
+	    <artifactId>hibernate-annotations</artifactId>
+	    <version>3.5.6-Final</version>
+     </dependency>
 
       <dependency>
         <groupId>commons-codec</groupId>
