--- a/server/pom.xml
+++ b/server/pom.xml
@@ -66,7 +66,7 @@
 
     <dependency>
       <groupId>org.hibernate</groupId>
-      <artifactId>hibernate</artifactId>
+      <artifactId>hibernate-core</artifactId>
       <scope>provided</scope>
     </dependency>
   </dependencies>
