--- a/pom.xml
+++ b/pom.xml
@@ -37,8 +37,8 @@
     <maven.min.version>3.1.1</maven.min.version>
     <compile.jdk.version>1.8</compile.jdk.version>
     <compile.jdk.home>${java.8.home}</compile.jdk.home>
-    <!-- compile.jdk.signature>java17</compile.jdk.signature>
-    <compile.jdk.signature.version>1.0</compile.jdk.signature.version-->
+    <compile.jdk.signature>java18</compile.jdk.signature>
+    <compile.jdk.signature.version>1.0</compile.jdk.signature.version>
     <skip.sanity.checks>false</skip.sanity.checks>
     <add.maven.descriptor>true</add.maven.descriptor>
 
@@ -381,20 +381,20 @@
             </dependency>
           </dependencies>
         </plugin>
-        <!--plugin>
+        <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>animal-sniffer-maven-plugin</artifactId>
           <version>1.14</version>
           <configuration>
             <signature>
-              <groupId>org.codehaus.mojo.signature</groupId>
+              <groupId>org.kaazing.mojo.signature</groupId>
               <artifactId>${compile.jdk.signature}</artifactId>
               <version>${compile.jdk.signature.version}</version>
             </signature>
             <skip>${skip.sanity.checks}</skip>
             <detail>true</detail>
           </configuration>
-        </plugin-->
+        </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>build-helper-maven-plugin</artifactId>
@@ -450,6 +450,11 @@
             </archive>
           </configuration>
         </plugin>
+        <plugin>
+          <groupId>org.zeroturnaround</groupId>
+          <artifactId>jrebel-maven-plugin</artifactId>
+          <version>1.1.5</version>
+        </plugin>
       </plugins>
     </pluginManagement>
 
@@ -466,7 +471,7 @@
           </execution>
         </executions>
       </plugin>
-      <!--plugin>
+      <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>animal-sniffer-maven-plugin</artifactId>
         <executions>
@@ -478,7 +483,7 @@
             </goals>
           </execution>
         </executions>
-      </plugin-->
+      </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>buildnumber-maven-plugin</artifactId>
@@ -491,20 +496,6 @@
           </execution>
         </executions>
       </plugin>
-      <plugin>
-		<groupId>org.zeroturnaround</groupId>
-		<artifactId>jrebel-maven-plugin</artifactId>
-		<version>1.1.5</version>
-		<executions>
-			<execution>
-				<id>generate-rebel-xml</id>
-				<phase>process-resources</phase>
-				<goals>
-					<goal>generate</goal>
-				</goals>
-			</execution>
-		</executions>
-	  </plugin>
     </plugins>
   </build>
 
@@ -1259,8 +1250,8 @@
       </dependency>
       <dependency>
         <groupId>jgroups</groupId>
-		<artifactId>jgroups</artifactId>
-		<version>2.4.1</version>
+        <artifactId>jgroups</artifactId>
+        <version>2.4.1</version>
         <scope>provided</scope>
       </dependency>
 
@@ -1480,7 +1471,37 @@
 
   <profiles>
     <profile>
+      <id>jrebel</id>
+      <activation>
+        <property>
+          <name>dev.env</name>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.zeroturnaround</groupId>
+            <artifactId>jrebel-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>generate-rebel-xml</id>
+                <phase>process-resources</phase>
+                <goals>
+                  <goal>generate</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
       <id>disable-sanity-check</id>
+      <activation>
+        <property>
+          <name>dev.env</name>
+        </property>
+      </activation>
       <properties>
         <skip.sanity.checks>true</skip.sanity.checks>
       </properties>
