--- a/modules/data/service/pom.xml
+++ b/modules/data/service/pom.xml
@@ -27,7 +27,7 @@
         <executions>
           <execution>
             <id>unpack</id>
-            <phase>process-resources</phase>
+            <phase>prepare-package</phase>
             <goals>
               <goal>unpack</goal>
             </goals>
