--- a/bai/pom.xml
+++ b/bai/pom.xml
@@ -47,17 +47,14 @@
     <dependency>
       <groupId>com.mg.modules</groupId>
       <artifactId>framework</artifactId>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.mg.modules.data</groupId>
       <artifactId>model</artifactId>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.mg.modules.baiengine</groupId>
       <artifactId>ejb</artifactId>
-      <scope>provided</scope>
     </dependency>
 
     <dependency>
@@ -76,7 +73,16 @@
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>com.sun</groupId>
+      <artifactId>javaee</artifactId>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
     </dependency>
   </dependencies>
 </project>
