--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -20,4 +20,16 @@
     <module>console</module>
     <module>dbconverter</module>
   </modules>
+
+  <dependencies>
+    <dependency>
+      <groupId>com.sun</groupId>
+      <artifactId>javaee</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+    </dependency>
+  </dependencies>
 </project>
