--- a/distribution/assembly/pom.xml
+++ b/distribution/assembly/pom.xml
@@ -15,7 +15,7 @@
   <packaging>pom</packaging>
 
   <name>MBSA::Distribution::Assembly</name>
-  <description>Сборка артефактов в архив</description>
+  <description>Distribution package assembly</description>
 
   <build>
     <finalName>MBSA-${project.version}</finalName>
@@ -56,7 +56,7 @@
     <dependency>
       <groupId>com.mg.modules.data</groupId>
       <artifactId>service</artifactId>
-      <type>jboss-har</type>
+      <type>har</type>
     </dependency>
     <dependency>
       <groupId>com.mg.modules.core</groupId>
@@ -82,7 +82,7 @@
     <dependency>
       <groupId>com.mg.modules.baiengine</groupId>
       <artifactId>service</artifactId>
-      <type>jboss-sar</type>
+      <type>sar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.server</groupId>
@@ -110,7 +110,7 @@
     <dependency>
       <groupId>com.mg.server.security</groupId>
       <artifactId>service</artifactId>
-      <type>jboss-sar</type>
+      <type>sar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.server</groupId>
@@ -138,7 +138,7 @@
     <dependency>
       <groupId>com.mg.server.report</groupId>
       <artifactId>service</artifactId>
-      <type>jboss-sar</type>
+      <type>sar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.server.reference</groupId>
@@ -169,7 +169,7 @@
     <dependency>
       <groupId>com.mg.server.docflow</groupId>
       <artifactId>service</artifactId>
-      <type>jboss-sar</type>
+      <type>sar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.server.document</groupId>
@@ -195,7 +195,7 @@
     <dependency>
       <groupId>com.mg.server.bpm</groupId>
       <artifactId>service</artifactId>
-      <type>jboss-sar</type>
+      <type>sar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.scheduler</groupId>
@@ -213,7 +213,7 @@
     <dependency>
       <groupId>com.mg.bai.scheduler</groupId>
       <artifactId>service</artifactId>
-      <type>jboss-sar</type>
+      <type>sar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.qc</groupId>
@@ -398,12 +398,12 @@
     <dependency>
       <groupId>com.mg.bai.help</groupId>
       <artifactId>service</artifactId>
-      <type>jboss-sar</type>
+      <type>sar</type>
     </dependency>
     <dependency>
       <groupId>com.mg.bai.wb</groupId>
       <artifactId>service</artifactId>
-      <type>jboss-sar</type>
+      <type>sar</type>
     </dependency>
 
     <dependency>
