--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,13 @@
     <oracleOc4jVersion>11</oracleOc4jVersion>
     <log4jVersion>1.2.17</log4jVersion>
     <junitVersion>4.11</junitVersion>
+
+    <!-- plugin versions -->
+    <findbugsPluginVersion>3.0.3</findbugsPluginVersion>
+    <jxrPluginVersion>2.5</jxrPluginVersion>
+    <javadocPluginVersion>2.10.3</javadocPluginVersion>
+    <pmdPluginVersion>3.6</pmdPluginVersion>
+    <surefirePluginVersion>2.19.1</surefirePluginVersion>
   </properties>
 
   <prerequisites>
@@ -161,6 +168,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>findbugs-maven-plugin</artifactId>
+        <version>${findbugsPluginVersion}</version>
         <configuration>
           <effort>Max</effort>
           <threshold>Low</threshold>
@@ -170,6 +178,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jxr-plugin</artifactId>
+        <version>${jxrPluginVersion}</version>
         <reportSets>
           <reportSet>
             <id>aggregate</id>
@@ -183,6 +192,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
+        <version>${javadocPluginVersion}</version>
         <reportSets>
           <reportSet>
             <id>aggregate</id>
@@ -196,11 +206,12 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-pmd-plugin</artifactId>
+        <version>${pmdPluginVersion}</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-report-plugin</artifactId>
-        <version>2.19.1</version>
+        <version>${surefirePluginVersion}</version>
       </plugin>
     </plugins>
   </reporting>
@@ -325,7 +336,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>2.10.3</version>
+          <version>${javadocPluginVersion}</version>
           <configuration>
             <failOnError>false</failOnError>
           </configuration>
@@ -342,12 +353,12 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jxr-plugin</artifactId>
-          <version>2.5</version>
+          <version>${jxrPluginVersion}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-pmd-plugin</artifactId>
-          <version>3.6</version>
+          <version>${pmdPluginVersion}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -415,11 +426,16 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.19.1</version>
+          <version>${surefirePluginVersion}</version>
           <configuration>
             <jvm>${compile.jdk.home}/bin/java</jvm>
             <forkMode>once</forkMode>
           </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-report-plugin</artifactId>
+          <version>${surefirePluginVersion}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -568,7 +584,7 @@
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>findbugs-maven-plugin</artifactId>
-          <version>3.0.3</version>
+          <version>${findbugsPluginVersion}</version>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
