--- a/modules/build.gradle
+++ b/modules/build.gradle
@@ -8,15 +8,34 @@ subprojects {
         main { compileClasspath += configurations.provided }
     }
 
+/*
+    jar {
+        manifest {
+            attributes(
+                    "Manifest-Version": "1.0",
+                    "Created-By": vendor,
+                    "Specification-Title": appName,
+                    "Specification-Version": version,
+                    "Specification-Vendor": vendor,
+                    "Implementation-Title": appName,
+                    "Implementation-Version": version,
+                    "Implementation-Vendor": vendor,
+                    "Class-Path": manifestClasspath
+            )
+        }
+    }
+*/
+
     dependencies {
         /* internal */
         compile         dep.mgFrameworkAux
 
         provided        dep.javaee
 
-        compile         dep.jbossSystem
-        compile         dep.jbossJmx
-        compile         dep.jbossAnnotationsEjb3
+        provided        dep.jbossSystem
+        provided        dep.jbossJmx
+        provided        dep.jbossAnnotationsEjb3
+
         compile         dep.hibernate
         compile         dep.commonsLang
         /* tests */
